@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-14T08:14:39Z",
+  "timestamp" : "2022-05-14T16:15:11Z",
   "count_outdated" : 264,
   "uniques_outdated" : 130,
-  "count" : 301,
+  "count" : 302,
   "uniques" : 156,
   "clones" : [
     {
@@ -84,8 +84,8 @@
     },
     {
       "timestamp": "2022-05-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
     }
