@@ -1,3 +1,10 @@
+2022-05-14T16:15:11Z:
+* notice: last 14d: all unq: 38 14
+* notice: prev accum: outdated-all outdated-unq / all unq: 264 130 / 301 156
+* notice: next accum: outdated-all outdated-unq / all unq: 264 130 / 302 156
+* notice: prev json diff / prev day diff: unq all: +0 +1 -0 -0 / +1 +3 -0 -0
+* notice: changed dates: [2022-05-14]
+
 2022-05-14T08:14:39Z:
 * notice: last 14d: all unq: 37 14
 * notice: prev accum: outdated-all outdated-unq / all unq: 264 130 / 300 155
